test/types/typedefs/bradc/redefineTypeNames3.good
redefineTypeNames3.chpl:1: In function 'main':
redefineTypeNames3.chpl:3: error: Variable name 'int' is a reserved word
redefineTypeNames3.chpl:4: error: Variable name 'real' is a reserved word
redefineTypeNames3.chpl:5: error: Variable name 'imag' is a reserved word
redefineTypeNames3.chpl:6: error: Variable name 'string' is a reserved word
redefineTypeNames3.chpl:7: error: Variable name 'complex' is a reserved word
